# TeleInfo

./: .gitignore  CMakeLists.txt  README.md  TeleInfo old.ui  TeleInfo.qrc  TeleInfo.ui  TeleInfoPlugin.cpp  TeleInfoPlugin.h  TeleInfoPlugin_Raspberry_Qt5152.pro
